ORG-1679: fix scroll bar and whitespace in footer

--- a/webapp/src/main/webapp/skin/css/brad-logout.css
+++ b/webapp/src/main/webapp/skin/css/brad-logout.css
@@ -740,6 +740,9 @@
     font-family: 'Lato', sans-serif;
     padding: 15px;
 }
+#brad-landing-page-container .footer > .container {
+    padding: 0!important;
+}
 #brad-landing-page-container .footer .scb-footer-menu  > li {
     display: inline-block;
 }
